# pto-isa

./: .gitignore  README.md  config_example.py  pto_compile.py  pto_isa_definition.py  pto_runtime.c  pto_runtime.py
docs/: getting-started.md  runtime_buffer_manager_methods.md  tensormap_design.md
examples/: pto_fused_softmax.py  run_all_tests.py  run_llama_simplify_color.py  test_llama_runtime  test_llama_runtime.c  test_matmul_coloring.py  test_pto_aten_ir_primitives.py  test_pto_isa_sinh.py  test_pto_torch_flexattention.py  test_pto_torch_functional.py  test_pto_torch_nn_operators.py  test_pto_torch_tensor.py  test_runtime_entry  test_runtime_entry.c  test_simplify_and_color.py  test_utils.py
examples/bgemm/: README.md  bgemm_dynamic_task_graph.txt  bgemm_kernel.py  generate_intermediates.py  pto_bgemm.py  pto_bgemm_adaptive.py  run_arm64.py  run_ascend_a2a3.py  run_ascend_a2a3_sim.py  run_ascend_a5.py  run_cuda.py  trace.json
examples/bgemm/output/ascend_a2a3/generated_code/kernels/aiv/: tile_copy.cpp
examples/bgemm/output/ascend_a2a3_sim/: benchmark_orchestration.json  benchmark_runtime.json  bgemm_dynamic  trace.json
examples/bgemm/output/ascend_a2a3_sim/generated_code/kernels/aic/: gemm_tile.cpp
examples/bgemm/output/ascend_a2a3_sim/generated_code/kernels/aiv/: tile_add.cpp
examples/bgemm/output/ascend_a2a3_sim/generated_code/orchestration/: bgemm_dynamic.c
examples/output_arm64/fused_softmax/: dynamic_softmax.c  dynamic_softmax_task_graph.txt  elem_exp.c  rowexpanddiv.c  rowexpandsub.c  rowmax.c  rowsum.c
examples/output_arm64/llama7b/: llama_layer_dynamic_task_graph.txt
examples/output_ascend910b/llama7b/: attention_output_tile.cpp  attention_output_tile_64.cpp  attention_score_tile.cpp  attention_score_tile_64.cpp  flash_attn_init_state.cpp  flash_attn_normalize.cpp  flash_attn_output_update.cpp  flash_attn_score_block.cpp  flash_attn_softmax_update.cpp  linear_tile.cpp  linear_tile_64.cpp  residual_add_tile.cpp  residual_add_tile_64.cpp  rmsnorm_tile.cpp  rmsnorm_tile_64.cpp  rope_tile.cpp  rope_tile_64.cpp  softmax_tile.cpp  softmax_tile_64.cpp  swiglu_tile.cpp  swiglu_tile_64.cpp  tile_add.cpp  tile_add_64.cpp  tile_exp.cpp  tile_exp_64.cpp  tile_matmul.cpp  tile_matmul_64.cpp  tile_mul.cpp  tile_mul_64.cpp  tile_muls.cpp  tile_muls_64.cpp  tile_rowexpanddiv.cpp  tile_rowexpanddiv_64.cpp  tile_rowexpandmul.cpp  tile_rowexpandmul_64.cpp  tile_rowexpandsub.cpp  tile_rowexpandsub_64.cpp  tile_rowmax.cpp  tile_rowmax_64.cpp  tile_rowsum.cpp  (+5 more)
kernels/python/bgemm_performance/: run_runtime.py
pto/: __init__.py  runtime.py
pto_as/: __init__.py
ptoas/: __init__.py
ptoas/examples/: gemm16_e2e.pto
ptoas/python/: __init__.py  ast_frontend.py  binding.py  dsl.py  host_codegen.py  host_spec.py  pto_asm.py
ref_runtime/example/: gemm16_ptoas.py  tprint16_ptoas.py
ref_runtime/src/platform/a2a3/aicpu/: kernel.cpp
ref_runtime/src/platform/a2a3/host/: kernel_compiler.cpp
ref_runtime/src/runtime/aicpu/: graphexecutor.cpp
runtime/: CMakeLists.txt  README.md  REORGANIZATION_SUMMARY.md  graphbuilder.cpp
runtime/aicore/: CMakeLists.txt  kernel.cpp
runtime/aicpu/: graph_executor.cpp
runtime/example/: main.py
runtime/example/basic/: CMakeLists.txt
runtime/example/basic_python/: CMakeLists.txt  gemm16_ptoas.py  tprint16_ptoas.py
runtime/graph/: graph.cpp  graph.h  handshake.h  kernel_args.h
runtime/host/: devicerunner.cpp  devicerunner.h  kernel_compiler.cpp  kernel_compiler.h
runtime/python/: CMakeLists.txt  README.md  binary_compiler.py  bindings.cpp  graphbuilder.py  runtime_bindings.py
runtime/src/platform/a2a3/aicore/: kernel.cpp
runtime/src/platform/a2a3/aicpu/: kernel.cpp
runtime/src/platform/a2a3/common/: kernel_args.h
runtime/src/platform/a2a3/host/: devicerunner.cpp  devicerunner.h  pto_runtime_c_api.cpp  pto_runtime_c_api.h
runtime/src/runtime/aicpu/: graphexecutor.cpp
runtime/src/runtime/graph/: graph.cpp  graph.h
runtime/src/runtime/host/: graphmaker.cpp
scripts/: rebuild_ptoas.sh
src/compile/: pto_codegen_arm64.py  pto_codegen_ascend_a2a3_sim.py  pto_compile.py  pto_to_ptoas.py
src/runtime/: pto_runtime.h  pto_runtime_arm64.c  pto_runtime_common.c  pto_runtime_common.h
src/runtime/runtime_a2a3/: a2a3_runtime.c  a2a3_runtime_api.h
src/runtime/runtime_a2a3/core/: a2a3_core_worker.c  a2a3_core_worker.h
src/runtime/runtime_a2a3/core/common/: pto_task.h
src/runtime/runtime_a2a3/orchestration/: a2a3_orchestration.c
src/runtime/runtime_a2a3_sim/core/: a2a3_core_worker.c
src/runtime2/: Makefile  pto_interval_tree.c  pto_interval_tree.h  pto_logical_tensor.c  pto_logical_tensor.h  pto_orchestrator.c  pto_ring_buffer.c  pto_runtime2_threaded.c  pto_runtime2_threaded.h  pto_runtime2_types.h  pto_scheduler.c  pto_scheduler.h  pto_shared_memory.h  pto_tensormap.c  pto_worker.c
src/runtime2/tests/: debug10.c  debug11.c  debug12.c  debug13.c  debug14.c  debug15.c  debug2.c  debug3.c  debug4.c  debug5.c  debug6.c  debug7.c  debug8.c  debug9.c  debug_1621.c  debug_2048.c  debug_4096.c  debug_7185.c  debug_8192.c  debug_atomic.c  debug_bgemm.c  debug_bug.c  debug_bug2.c  debug_bug3.c  debug_bug4.c  debug_chain.c  debug_completion.c  debug_completion2.c  debug_completion_count.c  debug_completion_queue.c  debug_dep.c  debug_dep_pool.c  debug_deps.c  debug_deps_detail.c  debug_fanin.c  debug_fanin2.c  debug_fanin_update.c  debug_fanout_1565.c  debug_fanout_dup.c  debug_fanout_head.c  (+34 more)
